--- a/pong/Gemfile
+++ b/pong/Gemfile
@@ -1,14 +1,7 @@
-# If you need to 'vendor your gems' for deploying your daemons, bundler is a
-# great option. Update this Gemfile with any additional dependencies and run
-# 'bundle install' to get them all installed. Daemon-kit's capistrano
-# deployment will ensure that the bundle required by your daemon is properly
-# installed.
 
-source :gemcutter
+source 'http://rubygems.org'
 
-# daemon-kit
 gem 'daemon-kit'
-
-# For more information on bundler, please visit http://gembundler.com
-gem 'amqp' # Only needed if running the AMQP participant/listener pair
+gem 'amqp', '0.7.0'
 gem 'json' # Can be replaced with json_pure
+
