--- a/pong/Gemfile
+++ b/pong/Gemfile
@@ -2,6 +2,7 @@
 source 'http://rubygems.org'
 
 gem 'daemon-kit'
-gem 'amqp', '0.7.0'
+gem 'safely'
+gem 'amqp', '0.7.1'
 gem 'json' # Can be replaced with json_pure
 
